--- a/_posts/2017-8-19-Plane-1.md
+++ b/_posts/2017-8-19-Plane-1.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: You're up and running!
+title: People on a Politcal Plane 1
+description: Introduction and motivation
 ---
 
 Next you can update your site name, avatar and other options using the _config.yml file in the root of your repository (shown below).
