Wrote first half

--- a/_posts/2017-8-30-Plane-2.md
+++ b/_posts/2017-8-30-Plane-2.md
@@ -6,4 +6,16 @@ description: Transformations
 
 Beliefs aren't usually static. They change based upon many different factors from environmental positions to discourse with another person.
 
-So today, as I promised, we will be looking into **transformations**. As a refresher, what do transformations represent? _A change in beliefs._
+_Note to the reader: I accidentally chose very bad "calculation" numbers. Be aware that I used a calculator for every calculation in this post and I do not expect you to understand the exact form. I only included it for rigor. Use the approximations._
+
+So today, as I promised, we will be looking into **transformations**. As a refresher, what do transformations represent? _A change in beliefs._ There are two fundamental kinds of transformations that we can do to a point $P$: $\varphi_P(\theta)$ and $\textup{R}_ P(r)$. $\varphi_P(\theta)$ rotates $P$ counterclockwise about the orgin by $\theta$ and $\textup{R}_ P(r)$ scales $P$ from the orgin by $r$. I will usually notate these transformations together in two equivalent ways as either $T_{\theta,r}(P)$ or $T_P \left ( \theta, r \right )$ depending on which notation is easier to read at the time.
+
+Let's do some examples. Here, we have point $P$. It is represented in cartesian coordinates as $(4,3)$ and $\left ( \arctan\left ( \frac{3}{4} \right ),5 \right )$ (or $\left ( 36.87^{\circ},5 \right $):
+
+![Point P](https://github.com/RoboNeo9/RoboNeo9.github.io/raw/master/images/2Cartesian1.png)
+
+Here we have three transformations of $P$: $P'_ 1 = T_P \left ( \frac{\pi}{2} , 1 \right )$, $P'_ 2 = T_P \left ( \arctan\left ( -\frac{6}{5\sqrt{13}} \right ) , \frac{3\sqrt{29}}{10} \right ) = T_P \left ( 109.44^\circ, 1.62 \right )$, and $P'_ 3 = T_P \left ( \arctan\left ( -\frac{2}{5\sqrt{5}} \right ) , \frac{\sqrt{5}}{10} \right ) = T_P \left ( 349.86^\circ, 0.22 \right )$.
+
+![Transformations](https://github.com/RoboNeo9/RoboNeo9.github.io/raw/master/images/2Cartesian2.png)
+
+One could also say that I included the transformation $P = T_P \left ( 0, 0 \right )$, the identity transformation.
