Finished 2nd post

--- a/_posts/2017-8-30-Plane-2.md
+++ b/_posts/2017-8-30-Plane-2.md
@@ -1,20 +1,20 @@
 ---
 layout: post
 title: People on a Political Plane 2
-description: Transformations
+description: Single Object Transformations (SOTs)
 ---
 
 Beliefs aren't usually static. They change based upon many different factors from environmental positions to discourse with another person.
 
 _Note to the reader: I accidentally chose very bad "calculation" numbers. Be aware that I used a calculator for every calculation in this post. Use the approximations. Don't get hung up on the numbers. Take in the concepts instead._
 
-So today, as I promised, we will be looking into **transformations**. As a refresher, what do transformations represent? _A change in beliefs._ There are two fundamental kinds of transformations that we can do to a point $P$:
+So today, as I promised, we will be looking into **transformations**. Today, we will be looking at **single object transformations** (SOTs). As a refresher, what do transformations represent? They represent _a change in beliefs._ There are two fundamental kinds of transformations that we can do to an object $P$:
 - $\varphi_P(\theta)$: a counterclockwise rotation of $P$ about the orgin by $\theta$
 - $R_ P(r)$: a scale from the orgin by $r$
 
 I will usually notate these transformations together in two equivalent ways as either $T_{\theta,r}(P)$ or $T_P \left ( \theta, r \right )$ depending on which notation is easier to read at the time.
 
-Let's do some examples. Here, we have point $P$. It is represented in cartesian coordinates as $(4,3)$ and $\left ( \arctan\left ( \frac{3}{4} \right ),5 \right )$ or $\left ( 36.87^{\circ} , 5 \right )$:
+Let's do some examples. Here, we have object $P$. Its position is represented in cartesian coordinates as $(4,3)$ or $\left ( \arctan\left ( \frac{3}{4} \right ),5 \right )$ or $\left ( 36.87^{\circ} , 5 \right )$:
 
 ![Point P](https://github.com/RoboNeo9/RoboNeo9.github.io/raw/master/images/2_Cartesian1.PNG)
 
@@ -35,3 +35,11 @@ Fun fact: $T_P \left ( \theta, r \right )$ defines a group. _If you don't know w
 - Operation: $T_P \left ( \theta_1, r_1 \right )+T_P \left ( \theta_2, r_2 \right ) = T_P \left ( \theta_1+\theta_2\mod 2\pi , r_1 r_2 \right )$ 
 - Identity: $e_P = T_P \left ( 0, 0 \right )$
 - Inverse: $-T_P \left ( \theta, r \right ) = T_P \left ( -\theta, r^{-1} \right )$
+
+I did not cover as much as I wanted to in this blog post today. However, if I moved on to multiple object transformations, this blog post would get way too long. Instead, I will provide only an introduction to them as we will cover them fully next time.
+
+**Multiple object transformations** (MOTs) are transformations that take in one or more (but usually one) objects as parameters. Unlike the name suggests, MOTs do not affect multiple objects. They only affect one. I will notate them like $P'=T_{Q,f}(P)$ where $P$ is the object being affected and $f$ is the function that relates $Q$ to $P'$. In the future, I will designate certain letters to represent MOTs with certain functions so that it doesn't have to be tediously notated. Like $D_Q(P)$ instead of $T_{Q,d}(P)$.
+
+As this post comes to a close, I want to bring today's ideas back to reality. When are SOTs actually occuring in real life? In other words, when are people's beliefs changing? How? These questions are far too complicated to be _entirely_ covered with our model. However, when fully developed, our model should hopefully provide clearer insight to their answers. Our final model will include the use of both SOTs and MOTs. An example of a SOT would be a change in someone's belief due to an event in their life. Can you think of any more?
+
+I also would like the reader to notice that changes in ideology (angle) occur much less frequently than changes in radical-ness (scale).
