--- a/_posts/2017-9-1-Plane-3.md
+++ b/_posts/2017-9-1-Plane-3.md
@@ -4,4 +4,4 @@ title: People on a Political Plane 3
 description: Multiple Object Transformations (MOTs)
 ---
 
-_No content_
+People are easily influenced by others around them. However, not everyone influences each other equally.
